<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/station_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/station_name_padding"
        android:textColor="@android:color/white"
        android:textSize="@dimen/station_name_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/action_button_margin"
        android:layout_marginRight="@dimen/action_button_margin"
        android:layout_marginTop="@dimen/action_button_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/label_margin"
                android:layout_marginTop="@dimen/label_margin"
                android:text="@string/address"
                android:textSize="@dimen/station_additional_data_size"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/station_address1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/station_additional_data_size" />

            <TextView
                android:id="@+id/station_address2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/station_additional_data_size" />

            <TextView
                android:id="@+id/station_address3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/station_additional_data_size" />

            <TextView
                android:id="@+id/contact_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/label_margin"
                android:layout_marginTop="@dimen/label_margin"
                android:text="@string/contact"
                android:textSize="@dimen/station_additional_data_size"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/station_contact1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/station_additional_data_size" />

            <TextView
                android:id="@+id/station_contact2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/station_additional_data_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/station_logo"
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:scaleType="center" />

            <TextView
                android:id="@+id/like_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/label_margin"
                android:layout_marginTop="@dimen/label_margin"
                android:text="@string/liked"
                android:textSize="@dimen/station_additional_data_size"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/likes"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="@dimen/statistic_padding_top"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/confirm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/label_margin"
                android:layout_marginTop="@dimen/label_margin"
                android:text="@string/confirmed"
                android:textSize="@dimen/station_additional_data_size"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/confirms"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="@dimen/statistic_padding_top"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/action_button_margin"
        android:layout_marginLeft="@dimen/action_button_margin"
        android:layout_marginRight="@dimen/action_button_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/like_panel"
            android:layout_width="@dimen/action_button_size"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/action_button_margin"
            android:layout_marginLeft="@dimen/action_button_margin"
            android:layout_marginRight="@dimen/action_button_margin"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/like_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@mipmap/thumb_up" />

            <TextView
                android:id="@+id/like_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like_description"
                android:textSize="@dimen/action_description_size" />

            <TextView
                android:id="@+id/relike_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relike_description"
                android:textSize="@dimen/action_description_size"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dislike_panel"
            android:layout_width="@dimen/action_button_size"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/action_button_margin"
            android:layout_marginLeft="@dimen/action_button_margin"
            android:layout_marginRight="@dimen/action_button_margin"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/dislike_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@mipmap/thumb_down" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlike_description"
                android:textSize="@dimen/action_description_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/accept_panel"
            android:layout_width="@dimen/action_button_size"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/action_button_margin"
            android:layout_marginLeft="@dimen/action_button_margin"
            android:layout_marginRight="@dimen/action_button_margin"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/accept_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@mipmap/accept" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_description"
                android:textSize="@dimen/action_description_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reject_panel"
            android:layout_width="@dimen/action_button_size"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/action_button_margin"
            android:layout_marginLeft="@dimen/action_button_margin"
            android:layout_marginRight="@dimen/action_button_margin"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/reject_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@mipmap/reject" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject_description"
                android:textSize="@dimen/action_description_size" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>